# L4-Smartroute

./: .gitignore  .mcp.json  LICENSE  README.md  config.yaml  install.sh  models.json  pyproject.toml
.claude/: settings.json
.claude/commands/: model-settings.md  smartroute-settings.md  smartroute.md  whichmodel.md
.playwright-mcp/: page-2026-06-10T20-49-04-521Z.yml  page-2026-06-10T21-00-26-247Z.yml  page-2026-06-10T21-00-39-979Z.yml  page-2026-06-11T00-45-32-634Z.yml  page-2026-06-11T00-46-37-603Z.yml  page-2026-06-11T00-47-24-467Z.yml  page-2026-06-11T00-47-54-783Z.yml
.serena/: project.yml
graphify-out/: .graphify_labels.json  .graphify_root  .vocab.txt  GRAPH_REPORT.md  manifest.json
graphify-out/2026-05-28/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-05-29/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-01/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-04/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-08/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  manifest.json
graphify-out/2026-06-09/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
scripts/: model-settings-hook.sh  model-settings.sh  smartroute-settings-hook.sh  smartroute-settings.sh
tests/: test_blast_radius.py  test_config.py  test_full_matrix.py  test_git_diff_analyzer.py  test_graph_analyzer.py  test_integration.py  test_model_refresh.py  test_prompt_matcher.py  test_recommender.py  test_server.py
(+32 files in other folders)
